'started hero section'

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
     <!-- Second Nav -->
     <nav class="navbar-two">
         <div class="navbar-container-two">
-            <div class="navbar-title">
-                <h1><span>ch</span>venue</h1>
+            <div>
+                <h1 class="navbar-title">ch<span>venue</span></h1>
             </div>
             <ul class="navbar-menu-two">
                 <li class="navbar-link-two">
@@ -72,6 +72,12 @@
         </div>
     </nav>
 
+    <!-- Hero Section -->
+    <div class="hero">
+        <div class="hero-container">
+            
+        </div>
+    </div>
 
     <script src="https://kit.fontawesome.com/2c61cbbcc0.js" crossorigin="anonymous"></script>
 </body>
