'Updated hero section'

--- a/index.html
+++ b/index.html
@@ -75,7 +75,22 @@
     <!-- Hero Section -->
     <div class="hero">
         <div class="hero-container">
-            
+            <div class="hero-top">
+                <div class="hero-left">
+                    <h3>Upcoming Events</h3>
+                </div>
+                <div class="hero-right">
+                    <div class="hero-btn-one">
+                        <i class="fa-sharp fa-solid fa-bars"></i>
+                    </div>
+                    <div class="hero-btn-two">
+                        <i class="fa-sharp fa-solid fa-bars"></i>
+                    </div>
+                </div>
+            </div>
+            <div class="hero-bottom">
+                <div>hello</div>
+            </div>
         </div>
     </div>
 
