--- a/index.html
+++ b/index.html
@@ -80,11 +80,11 @@
                     <h3>Upcoming Events</h3>
                 </div>
                 <div class="hero-right">
-                    <div class="hero-btn-one">
-                        <i class="fa-sharp fa-solid fa-bars"></i>
+                    <div class="hero-btn">
+                        <i class="fa-sharp fa-solid fa-bars fa-3x"></i>
                     </div>
-                    <div class="hero-btn-two">
-                        <i class="fa-sharp fa-solid fa-bars"></i>
+                    <div class="hero-btn">
+                        <i class="fa-sharp fa-solid fa-bars fa-3x"></i>
                     </div>
                 </div>
             </div>
