'Updated hero section'

--- a/index.html
+++ b/index.html
@@ -81,19 +81,20 @@
                 </div>
                 <div class="hero-right">
                     <div class="hero-btn">
-                        <i class="fa-sharp fa-solid fa-bars fa-3x"></i>
+                        <i class="fa-duotone fa-grid"></i>
                     </div>
                     <div class="hero-btn">
-                        <i class="fa-sharp fa-solid fa-bars fa-3x"></i>
+                        <i class="fa-sharp fa-solid fa-bars fa-2x"></i>
                     </div>
                 </div>
             </div>
             <div class="hero-bottom">
-                <div>hello</div>
+                
             </div>
         </div>
     </div>
 
     <script src="https://kit.fontawesome.com/2c61cbbcc0.js" crossorigin="anonymous"></script>
+    <script src="./app.js"></script>
 </body>
 </html>
