'Updated hero section'

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <div class="navbar-container-two">
             <div>
                 <h1 class="navbar-title">ch<span>venue</span></h1>
-            </div>
+            </div class='navbar-header'>
             <ul class="navbar-menu-two">
                 <li class="navbar-link-two">
                     <a href="" class="navbar-item-two">TICKETS</a>
@@ -81,10 +81,10 @@
                 </div>
                 <div class="hero-right">
                     <div class="hero-btn">
-                        <i class="fa-duotone fa-grid"></i>
+                        <i class="fa-sharp fa-solid fa-bars fa-3x"></i>
                     </div>
                     <div class="hero-btn">
-                        <i class="fa-sharp fa-solid fa-bars fa-2x"></i>
+                        <i class="fa-sharp fa-solid fa-bars fa-3x"></i>
                     </div>
                 </div>
             </div>
