'Updated hero section photos'

--- a/index.html
+++ b/index.html
@@ -94,6 +94,15 @@
         </div>
     </div>
 
+    <!-- <footer>
+        <div class="footer-container">
+            <img src="images/crowd.png" alt="">
+            <div class="footer-newsletter">
+
+            </div>
+        </div>
+    </footer> -->
+
     <script src="https://kit.fontawesome.com/2c61cbbcc0.js" crossorigin="anonymous"></script>
     <script src="./app.js"></script>
 </body>
