'started footer; uploaded photo'

--- a/index.html
+++ b/index.html
@@ -89,19 +89,18 @@
                 </div>
             </div>
             <div class="hero-bottom">
-                
             </div>
         </div>
     </div>
 
-    <!-- <footer>
+    <footer>
         <div class="footer-container">
             <img src="images/crowd.png" alt="">
             <div class="footer-newsletter">
 
             </div>
         </div>
-    </footer> -->
+    </footer>
 
     <script src="https://kit.fontawesome.com/2c61cbbcc0.js" crossorigin="anonymous"></script>
     <script src="./app.js"></script>
