--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </div>
             </div>
             <div class="navbar-login">
-                <button class="navbar-btn">LOGIN</button>
+                <a class="navbar-btn">LOGIN</a>
                 <i class="fa-regular fa-circle-user fa-xl fa-inverse"></i>
             </div>
         </div>
@@ -95,10 +95,18 @@
 
     <footer>
         <div class="footer-container">
-            <img src="images/crowd.png" alt="">
             <div class="footer-newsletter">
-
+                <div class="footer-signup">
+                    <h4>Newsletter signup</h4>
+                </div>
+                <div class="footer-update">
+                    <p>Stay updated on the best concerts and most hip events!</p>
+                </div>
+                <div class="footer-link">
+                    <a href="">get connected</a>
+                </div>
             </div>
+            <img src="images/crowd.png" alt="">
         </div>
     </footer>
 
