--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 </div>
                 <div class="hero-right">
                     <div class="hero-btn">
-                        <i class="fa-sharp fa-solid fa-bars fa-3x"></i>
+                        <i class="fa-regular fa-grip"></i>
                     </div>
                     <div class="hero-btn">
                         <i class="fa-sharp fa-solid fa-bars fa-3x"></i>
@@ -97,7 +97,7 @@
         <div class="footer-container">
             <div class="footer-newsletter">
                 <div class="footer-signup">
-                    <h4>Newsletter signup</h4>
+                    <h1>Newsletter signup</h1>
                 </div>
                 <div class="footer-update">
                     <p>Stay updated on the best concerts and most hip events!</p>
@@ -106,7 +106,7 @@
                     <a href="">get connected</a>
                 </div>
             </div>
-            <img src="images/crowd.png" alt="">
+            <img src="images/crowd.png" alt="crowd">
         </div>
     </footer>
 
