'fixed sizing of images and elements'

--- a/index.html
+++ b/index.html
@@ -92,10 +92,14 @@
             </div>
         </div>
     </div>
+    
+    <!-- Footer Section -->
 
     <footer>
         <div class="footer-container">
-            <div class="footer-newsletter">
+            <img src="images/crowd.png" alt="crowd">
+            <div class="footer-newsletter"></div>
+            <div class="footer-info">
                 <div class="footer-signup">
                     <h1>Newsletter signup</h1>
                 </div>
@@ -106,7 +110,6 @@
                     <a href="">get connected</a>
                 </div>
             </div>
-            <img src="images/crowd.png" alt="crowd">
         </div>
     </footer>
 
