--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
     <!-- Second Nav -->
     <nav class="navbar-two">
         <div class="navbar-container-two">
-            <div>
+            <div class='navbar-header'>
                 <h1 class="navbar-title">ch<span>venue</span></h1>
-            </div class='navbar-header'>
+            </div >
             <ul class="navbar-menu-two">
                 <li class="navbar-link-two">
                     <a href="" class="navbar-item-two">TICKETS</a>
