--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
                     <a href="" class="navbar-item-two">ABOUT US</a>
                 </li>
             </ul>
+            <div class="navbar-bars">
+                <i class="fa-sharp fa-solid fa-bars fa-3x"></i>
+            </div>
         </div>
     </nav>
 
