--- a/index.html
+++ b/index.html
@@ -38,9 +38,7 @@
             </ul>
             <div class="navbar-search">
                 <input type="text" class="navbar-input" placeholder="SEARCH EVENTS">
-                <div class="navbar-icon">
-                    <i class="fa-solid fa-magnifying-glass"></i>
-                </div>
+                <i class="fa-solid fa-magnifying-glass navbar-icon"></i>
             </div>
             <div class="navbar-login">
                 <a class="navbar-btn">LOGIN</a>
@@ -97,7 +95,6 @@
     </div>
     
     <!-- Footer Section -->
-
     <footer>
         <div class="footer-container">
             <img src="images/crowd.png" alt="crowd">
