--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 </div>
                 <div class="hero-right">
                     <div class="hero-btn">
-                        <i class="fa-regular fa-grip"></i>
+                        <i class="fa-sharp fa-solid fa-ellipsis fa-3x"></i>
                     </div>
                     <div class="hero-btn">
                         <i class="fa-sharp fa-solid fa-bars fa-3x"></i>
